# caffa-python

./: .gitignore  .gitmodules  README.md  __init__.py  client.py  conftest.py  generate_grpc_classes.bat  generate_grpc_classes.sh  method.py  object.py  pyproject.toml  restclient.py  setup.py
caffa/: __init__.py  method.py  object.py  restclient.py
output_dir/: object.py
tests/: test_client.py  test_objects.py
